--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+}
+
 
 .header {
   background-color: #430387;
@@ -101,7 +105,6 @@ h3 {
   margin-right: 0px;
   margin-top: -10px;
   background-color: #430387;
-  height: auto;
   width: (100 - 25); 
   padding-block-end: 10%;
 }
