--- a/assets/CSS/cadastro.css
+++ b/assets/CSS/cadastro.css
@@ -1,8 +1,8 @@
 .header {
     background-color: #430387;
-    padding: 10px; 
-    text-align: left; 
-    margin: 0; 
+    padding: 0;
+    margin: 0;
+    text-align: left;
     border-top: none;
 }
 
@@ -10,12 +10,9 @@
     max-width: 15%;
     height: auto;
     display: inline-block;
-    vertical-align: left; 
-    margin-bottom: 10px;
-    margin-right: 0px; 
-    margin-left: 25px;
+    vertical-align: left;
+    margin: 0;
 }
-
 
 h1{ 
     color: #430387;
