--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,13 +1,12 @@
 body {
   margin: 0;
+  padding: 0;
 }
-
 
 .header {
   background-color: #430387;
   padding: 55px;
   text-align: right;
-  margin: 0; 
   border-top: none;
 }
 
@@ -24,44 +23,45 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 20px;
   font-weight: bold;
-  margin-top: 15px;
+  margin-top: 5px;
+  margin-bottom: 15px;
 }
 
 .header img {
-  max-width: 100%;
+  max-width: 50%;
   height: auto;
   display: block;
-  margin-bottom: 10px;
   float: left;
-  margin-right: 20px;
+  margin-right: 15px;
+  margin-top: -25px;
 }
 
 hr {
   border: none; 
   border-top: 1px solid #2e2e2e; 
   margin-top: 4%;
+  margin: 0 auto; 
+  text-align: center; 
 }
-
 
 .banner {
   background-color: #430387;
   width: (100 - 20); 
   height: 87vh; 
   margin-top: -40px;
-  padding-top: 20px ;
+  padding-top: 10px ;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   padding-left: 62px;
   color: #FFC745;
-
 }
 
 h1 {
   font-size: 70px;
-  margin-right: 0px;
 }
 
 h2{
   font-size: 17px;
+  margin-top: -10px;
 }
 
 h3 {
@@ -76,7 +76,6 @@ h3 {
   float: right;
   margin-right: 0px;
   margin-top: -450px;
-  
 }
 
 .banner button {
@@ -95,16 +94,27 @@ h3 {
   margin-top: 15px;
 }
 
-
-.parceiros img { 
+.footer img {
   max-width: 100%;
   height: auto;
   display: block;
-  margin-bottom: 10px;
-  float: right;
-  margin-right: 0px;
-  margin-top: -10px;
+  margin: 0;
+  margin-bottom: 0px;
+  margin-top: -200px;
+  padding: 0;
   background-color: #430387;
-  width: (100 - 25); 
-  padding-block-end: 10%;
+  transform: scale(0.5); 
+
 }
+.footer {
+  background-color: #430387;
+  padding: 0px;
+  margin-bottom: 0;
+  margin: 0;;
+}
+
+.parceiros{
+  margin: 0;
+}
+
+
