--- a/assets/CSS/cadastro.css
+++ b/assets/CSS/cadastro.css
@@ -1,32 +1,56 @@
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: rgba(237, 245, 245, 0.365);
+}
+
 .header {
     background-color: #430387;
-    padding: 0;
-    margin: 0;
-    text-align: left;
-    border-top: none;
+    padding: 35px; 
 }
 
 .header img {
-    max-width: 15%;
-    height: auto;
-    display: inline-block;
-    vertical-align: left;
+    max-width: auto; 
+    height: 70px; 
+    float: left; 
+    margin-top: -15px;
+    margin-left: 50px;
+}
+
+ul{
+    list-style-type: none;
+    padding: 0;
     margin: 0;
+    display: flex;
+    color: #FFA500;
+    margin-top: 10px;
+    font-size: larger;
+}
+
+li{
+    margin: 1px;
+    cursor: pointer;
+    margin-left: 30px;
+}
+
+a{ 
+    text-decoration: none;
+    color: #FFA500;
 }
 
 h1{ 
     color: #430387;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: justify;
-    margin-right: 20px;
+    margin-left: 90px;
+    margin-top: 20px;
 }
 
 label {
     display: block; 
     margin-bottom: 10px; 
     color: #430387;
-    margin-right: 10px; 
-    margin-left: 20px; 
+    margin-left: 90px; 
 }
 
 input[type="email"]{
@@ -35,6 +59,7 @@ input[type="email"]{
     border: 2px solid #430387; 
     width: 500px; 
     margin-bottom: 0px;
+    margin-left: 90px;
 }
 
 input[type="tel"]{
@@ -43,9 +68,10 @@ input[type="tel"]{
     border: 2px solid #430387; 
     width: 500px; 
     margin-bottom: 0px;
+    margin-left: 90px;
 }
 
-.custom-button {
+#submitButton {
     background-color: #430387; 
     color: #FFC745; 
     border: none; 
@@ -54,158 +80,49 @@ input[type="tel"]{
     height: 40px;
     font-size: 25px; 
     cursor: pointer; 
-    margin-left: 80px;
+    margin-left: 90px;
     align-items: center;
-    line-height: 60px;
-    align-items: center;
+    line-height: 40px; 
     display: flex;
     justify-content: center;
-    padding-top: 10px;
-}
-
-.arrow {
-    display: inline-block; 
-}
-
-
+    padding-top: 7px; 
+    text-align: center;
+    }
+    
 
 label{ 
     color: #430387;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;  
+    font-size: large;
    
 }
 
 input[type="radio"] + span {
     color: #430387;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     margin-right: 10px; 
     margin-left: 20px; 
 }
 
-
-h3{ 
-    color: #430387;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-align: justify;
-    margin-right: 20px;
-    margin-top: 30px;
-}
-
-.espacamento {
-    margin-top: 20px; 
-    margin-bottom: 20px; 
-    margin-left: 0; 
-    margin-right: 0; 
-    padding-top: 20px; 
-    padding-bottom: 20px; 
-    padding-left: 0; 
-    padding-right: 0; 
-}
-
-.img1 {
-    max-width: 100%; 
-    height: auto;
-    display: block;
-    float: right;
-    margin-right: 400px; 
-    margin-top: 900px; 
-    margin-left: 0%;
-    margin-bottom: 0%;
-}
-
-button {
-    background-color:#FFA500; 
-    color: white; 
-    border: none; 
-    border-radius: 60px; 
-    padding: 10px 20px; 
-    font-size: 20px; 
-    cursor: pointer;
-    text-align: center;
-    margin: 0 auto;
-    display: block;
-    margin-top: 40px;
-    
-} 
-
-.img2 {
-    max-width: 40%; 
-    height: auto;
-    display: block;
-    float: right;
-    margin-right: 200px; 
-    margin-top: -100px;
-    margin-left: 100px;
-    align-items: center;
-}
-
-
-.bloco1{
-    color: #430387;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-align: justify;
-    margin-right: 10px; 
-    margin-left: 20px; 
-    margin-top: 90px;
-    width: 70%;
-}
-
-.bloco2{
-    margin-bottom: 250px; 
-    color: #430387;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-align: justify;
-    margin-right: 10px; 
-    margin-left: 20px; 
-    margin-top: 250px;
-}
-
-.bloco3{
-    margin-bottom: 250px; 
-    color: #430387;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-align: justify;
-    margin-right: 10px; 
-    margin-left: 20px; 
-    margin-top: 250px;
-}
-
-.img3 {
-    max-width: 30%;
-    height: auto;
-    display: block;
-    float: right;
-    margin-right: 240px; 
-    margin-top: 100px; /* Ajuste o valor positivo para mover a imagem mais para baixo */
-    margin-left: 40px; /* Ajuste o valor negativo para mover a imagem mais para a esquerda */
-    align-items: center;
-}
-
-
 .footer {
     background-color: #430387;
-    padding: 10px;
-    color: white;
-    display: flex;
-    justify-content: space-between;
+    padding: 35px;
+    margin-top: 30px;
+    margin-right: 0;
+    margin-left: 0;
+    display: grid;
+    grid-template-columns: auto 1fr;
     align-items: center;
+    gap: 20px;
+    padding-left: 80px; 
 }
 
-.logo img {
-    max-width: 100px; 
-    height: auto;
-    margin: 20px;
-}
 
-.privacy p {
-    margin: 0;
-    color: #FFA500;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+h3 {
+    color: #FFC745;
     text-align: left;
-    margin-right: 1100px; 
-    margin-left: 0; 
+    margin-left: 20px; 
+    margin-top: -10px; 
 }
 
 
