--- a/assets/CSS/perguntas.css
+++ b/assets/CSS/perguntas.css
@@ -57,7 +57,7 @@ body {
 }
 
 .footer {
-  background-color: #430387; /* Cor roxa para o footer */
+  background-color: #430387; 
   padding: 10px;
   color: white;
   display: flex;
@@ -67,7 +67,7 @@ body {
 }
 
 .footer .logo img {
-  max-width: 80px; /* Reduzindo o tamanho do logo no footer */
+  max-width: 80px; 
   height: auto;
   margin-left: 45px;
 }
