--- a/assets/CSS/motorista.css
+++ b/assets/CSS/motorista.css
@@ -1,39 +1,50 @@
+body{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0; 
+    padding: 0;
+}
+
 .header.motorista {
     background-color: #430387;
-    padding: 60px;
+    padding: 35px;
     text-align: right;
-    margin: 0px;
-    margin-top: 0;
-    border-top: none;
 } 
 
-.header button {
-    background-color: #FFC745;
-    border-radius: 50px;
-    border-color: #FFC745;
-    border-style: solid;
+ul{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    color: #FFA500;
+    margin-top: 10px;
+    font-size: larger;
+}
+
+li{
+    margin: 1px;
     cursor: pointer;
-    padding: 15px 35px;
-    text-align: center;
-    color: #430387;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 20px;
-    font-weight: bold;
-    margin-top: 15px;
+    margin-left: 30px;
+}
+
+a{ 
+    text-decoration: none;
+    color: #FFA500;
 }
 
 .header img { 
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 10px;
-    float: left;
-    margin-right: 20px;
+    max-width: auto; 
+    height: 70px; 
+    float: left; 
+    margin-top: -15px;
+    margin-left: 50px;
 }
 
 body h1 {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #430387;
     text-align: center; 
-    margin-top: 30px;
+    margin-top: 50px;
+    font-size: 50px;
+    
 }
 
 .body img {
@@ -41,6 +52,7 @@ body h1 {
     margin-top: 0;
     margin-right: 30px;
     margin-left: 0px;
+    margin-top: 0;
 } 
 
 
@@ -54,16 +66,7 @@ body h1 {
     gap: 20px; 
 }
 
-.td img {
-    max-width: 100%;
-    height: auto;
-    margin: 10px;
-    float: left;
-    margin-right: 20px;  
-  
-}
-
-h2 {
+h3 {
     color: #FFC745;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: left;
