--- a/assets/CSS/cadastro.css
+++ b/assets/CSS/cadastro.css
@@ -2,7 +2,7 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: rgba(237, 245, 245, 0.365);
+    background-color: #dcdcdc3b;
 }
 
 .header {
