--- a/assets/CSS/perguntas.css
+++ b/assets/CSS/perguntas.css
@@ -1,92 +1,81 @@
-.header {
-  padding: 10px;
-  text-align: left;
-  margin: 0;
-  border-top: none;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  z-index: 1000;
-  background-color: #430387; 
-  color: #FFF; 
-  display: flex; /* Utiliza flexbox para organizar os elementos */
-  justify-content: space-between; /* Alinha os elementos ao longo do eixo principal com espaçamento uniforme */
-  align-items: center; /* Centraliza verticalmente os elementos */
-}
-
-.header nav {
-  margin-top: 10px; 
-  margin-right: 60px; /* Adicione margem direita para criar espaço entre os links e a borda direita da tela */
-}
-
-.header nav a {
-  text-decoration: none; 
-  color: #FFC745;
+body{
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  margin-left: 20px; 
+  margin: 0;
+  padding: 0;
+  background-color: #dcdcdc3b;
 }
 
-.header img {
-  max-width: 15%;
-  height: auto;
-  margin-left: 45px; 
+.header.perguntas{
+  background-color: #430387;
+  padding: 35px;
+  text-align: right;
+  margin: 0px;
+  margin-top: 0;
+  border-top: none;
+} 
+
+.header img { 
+  max-width: auto; 
+  height: 70px; 
+  float: left; 
+  margin-top: -15px;
+  margin-left: 50px;
 }
 
-
-body {
-  margin-top:70px; 
-  border: 0;
-  margin: 0%;
-  margin-top: 5%;
-  background-color: #F6F3FC;
+ul{
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  color: #FFA500;
+  margin-top: 10px;
+  font-size: larger;
 }
 
-.img1 {
-  width: auto; 
-  object-fit: cover; 
-  padding-top:70px; 
-  margin-left:20%;
-  margin-right: auto; 
+li{
+  margin: 1px;
+  cursor: pointer;
+  margin-left: 30px;
 }
 
-.img2 {
-  margin-left: 0; 
-  width: 350px;
-  margin-top: 40px;
-  margin-bottom: 0;
+a{ 
+  text-decoration: none;
+  color: #FFA500;
 }
+
+h2{
+  color: #FFC745;
+  text-align: left;
+  margin: 15px; 
+}
+
+.img1 { 
+  margin: 20px auto;
+  display: block;
+  margin-bottom: 40px;
+  }
+
 
 .footer {
-  background-color: #430387; 
-  padding: 10px;
-  color: white;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  background-color: #430387;
+  padding: 50px;
   margin: 0;
+  display: grid; 
+  grid-template-columns: auto 1fr; 
+  align-items: center; 
+  gap: 20px; 
 }
 
-.footer .logo img {
-  max-width: 80px; 
-  height: auto;
-  margin-left: 45px;
-}
-
-
-.side-text {
-  float: right; 
-  width: 40%; 
-  padding: 0 40px; 
-  margin-top: 120px; 
-  margin-right: 350px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color: #430387;
-
-}
-
-.privacy{
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+h2 {
   color: #FFC745;
-  margin-right: 45px;
+  text-align: center; 
+  margin: 5px; 
+  margin-top: -15px;
+  margin-bottom: 10px;
 }
 
+h3{
+  color: #FFC745;
+  text-align: left; 
+  margin-top: -20px;
+}
