--- a/assets/CSS/missao.css
+++ b/assets/CSS/missao.css
@@ -1,52 +1,120 @@
-.img2 {
-    max-width: 40%; 
-    height: auto;
-    display: block;
-    float: right;
-    margin-right: 200px; 
-    margin-top: -100px;
-    margin-left: 100px;
+body{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0; 
+    padding: 0;
+    background-color: #dcdcdc3b;
+}
+
+.header.missao {
+    background-color: #430387;
+    padding: 35px;
+    text-align: right;
+} 
+
+ul{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    color: #FFA500;
+    margin-top: 10px;
+    font-size: larger;
+}
+
+li{
+    margin: 1px;
+    cursor: pointer;
+    margin-left: 30px;
+}
+
+a{ 
+    text-decoration: none;
+    color: #FFA500;
+}
+
+.header img { 
+    max-width: auto; 
+    height: 70px; 
+    float: left; 
+    margin-top: -15px;
+    margin-left: 50px;
+}
+
+.bloco1,
+.bloco3 {
+    display: flex;
     align-items: center;
-}
-
-
-.bloco1{
+    margin: 0;
+    margin-left: 15%;
+    margin-bottom: 10px;
+    text-align: left;
     color: #430387;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-align: justify;
-    margin-right: 10px; 
-    margin-left: 20px; 
-    margin-top: 90px;
-    width: 70%;
 }
 
-.bloco2{
-    margin-bottom: 250px; 
-    color: #430387;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-align: justify;
-    margin-right: 10px; 
-    margin-left: 20px; 
-    margin-top: 250px;
-}
-
-.bloco3{
-    margin-bottom: 250px; 
-    color: #430387;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-align: justify;
-    margin-right: 10px; 
-    margin-left: 20px; 
-    margin-top: 250px;
-}
-
-.img3 {
-    max-width: 30%;
-    height: auto;
-    display: block;
-    float: right;
-    margin-right: 240px; 
-    margin-top: 100px; /* Ajuste o valor positivo para mover a imagem mais para baixo */
-    margin-left: 40px; /* Ajuste o valor negativo para mover a imagem mais para a esquerda */
+.bloco2 {
+    display: flex;
     align-items: center;
+    flex-direction: row-reverse;
+    margin: 0; 
+    margin-left: 20%;
+    margin-top: -10%;
+    color: #430387;
 }
+
+.text-content {
+    flex: 1;
+}
+
+.img-left {
+    order: 1;
+    width: 40%; 
+    height: auto; 
+    margin-right: 10%; 
+    margin-left: -70px;
+    margin-top: 0;
+    margin-bottom: 10%;
+}
+
+
+.img-right {
+    order: 2;
+}
+
+.bloco1 img {
+    width: 15%; 
+    height: auto; 
+    margin-right: 40%; 
+    margin-top: 10%;
+    margin-bottom: 5%;
+}
+
+.bloco3 .text-content {
+    margin-top: -20%;
+}
+
+
+.bloco3 img {
+    width: 35%; 
+    height: auto; 
+    margin-right: 20%; 
+    margin-top: -4%;
+    margin-bottom: 5%
+}
+
+.footer {
+    background-color: #430387;
+    padding: 30px;
+    margin: 0;
+    display: grid; 
+    grid-template-columns: auto 1fr; 
+    align-items: center; 
+    gap: 20px; 
+}
+
+h3 {
+    color: #FFC745;
+    text-align: left;
+    margin: 15px; 
+
+}
+
