--- a/assets/CSS/perguntas.css
+++ b/assets/CSS/perguntas.css
@@ -11,6 +11,7 @@ body{
   text-align: right;
   margin: 0px;
   margin-top: 0;
+  margin-bottom: 20px;
   border-top: none;
 } 
 
@@ -50,32 +51,37 @@ h2{
 }
 
 .img1 { 
-  margin: 20px auto;
+  margin: 40px;
+  margin-top: 10px;
   display: block;
   margin-bottom: 40px;
-  }
-
-
+  
+}
 .footer {
   background-color: #430387;
-  padding: 50px;
-  margin: 0;
-  display: grid; 
-  grid-template-columns: auto 1fr; 
-  align-items: center; 
-  gap: 20px; 
+  padding: 40px;
+  margin-top: 30px; 
+  margin-right: 0;
+  margin-left: 0;
+  display: grid;
+  grid-template-columns: auto 2fr;
+  align-items: center;
+  padding-left: 80px; 
+  margin-bottom: 0;
 }
+
 
 h2 {
   color: #FFC745;
   text-align: center; 
   margin: 5px; 
-  margin-top: -15px;
+  margin-top: 20px;
   margin-bottom: 10px;
 }
 
 h3{
   color: #FFC745;
   text-align: left; 
-  margin-top: -20px;
+  margin-top: -10px;
+  margin-left: 30px;
 }
