--- a/assets/CSS/motorista.css
+++ b/assets/CSS/motorista.css
@@ -74,6 +74,23 @@ h3 {
 
 }
 
+@media only screen and (max-width: 768px) {
+    .header {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .header img {
+        margin-bottom: 10px;
+    }
+
+    ul li {
+        display: block;
+        margin-bottom: 10px;
+    }
+}
+
+
 
 
 
