--- a/assets/CSS/perguntas.css
+++ b/assets/CSS/perguntas.css
@@ -85,3 +85,23 @@ h3{
   margin-top: -10px;
   margin-left: 30px;
 }
+
+@media only screen and (max-width: 768px) {
+  .header {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .header img {
+    margin-bottom: 10px;
+  }
+
+  ul li {
+    display: block;
+    margin-bottom: 10px;
+  }
+
+  .side-text {
+    margin: 10px;
+  }
+}
