--- a/assets/CSS/perguntas.css
+++ b/assets/CSS/perguntas.css
@@ -2,7 +2,7 @@ body{
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #dcdcdc3b;
+  background-color: #fff;
 }
 
 .header.perguntas{
@@ -55,8 +55,8 @@ h2{
   margin-top: 10px;
   display: block;
   margin-bottom: 40px;
-  
 }
+
 .footer {
   background-color: #430387;
   padding: 40px;
