--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,4 +1,5 @@
 body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   padding: 0;
   background-color: #dcdcdc3b;
@@ -21,7 +22,6 @@ body {
   padding: 15px 35px;
   text-align: center;
   color: #430387;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 20px;
   font-weight: bold;
   margin-top: 5px;
@@ -51,7 +51,6 @@ hr {
   height: 87vh; 
   margin-top: -40px;
   padding-top: 10px ;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   padding-left: 62px;
   color: #FFC745;
 }
@@ -75,8 +74,8 @@ h3 {
   display: block;
   margin-bottom: 10px;
   float: right;
-  margin-right: 0px;
-  margin-top: -450px;
+  margin-right: 15%;
+  margin-top: -420px;
 }
 
 .banner button {
