--- a/assets/CSS/missao.css
+++ b/assets/CSS/missao.css
@@ -117,13 +117,12 @@ a{
     gap: 20px; 
 }
 
-h3 {
+.footer h3 {
     color: #FFC745;
     text-align: left;
     margin-left: 30px;
-    margin: 15px; 
-
 }
+
 
 @media only screen and (max-width: 768px) {
     .header {
