--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -7,155 +7,78 @@ body {
 
 .header {
   background-color: #430387;
-  padding: 55px;
-  text-align: right;
-  border-top: none;
-}
-
-.header button {
-  background-color: #FFC745;
-  border-radius: 50px;
-  border-color: #FFC745;
-  border-width: 2px;
-  border-style: solid;
-  cursor: pointer;
-  padding: 15px 35px;
-  text-align: center;
-  color: #430387;
-  font-size: 20px;
-  font-weight: bold;
-  margin-top: 5px;
-  margin-bottom: 15px;
+  padding: 20px;
 }
 
 .header img {
-  max-width: 50%;
-  height: auto;
-  display: block;
-  float: left;
-  margin-right: 15px;
-  margin-top: -25px;
-}
-
-hr {
-  border: none; 
-  border-top: 1px solid #2e2e2e; 
-  margin-top: 4%;
-  margin: 0 auto; 
-  text-align: center; 
+  margin-top: 5px;
+  max-width: 35px; 
 }
 
 .banner {
   background-color: #430387;
-  width: (100 - 20); 
-  height: 87vh; 
-  margin-top: -40px;
-  padding-top: 10px ;
-  padding-left: 62px;
   color: #FFC745;
+  padding: 20px;
 }
 
-h1 {
-  font-size: 70px;
+.banner h1 {
+  font-size: 4.5rem;
+  text-align: justify;
 }
 
-h2{
-  font-size: 17px;
-  margin-top: -10px;
+.banner h2 {
+  font-size: 1.25rem;
+
 }
 
-h3 {
-  font-size: 23px;
+.banner h3 {
+  font-size: 1.5rem;
 }
 
-.banner img {
-  max-width: 100%;
-  height: auto;
-  display: block;
-  margin-bottom: 10px;
-  float: right;
-  margin-right: 15%;
-  margin-top: -420px;
+.btn-custom {
+  background-color: #FFC745; /* Amarelo */
+  color: #430387; /* Roxo */
+  border-color: #FFC745; /* Cor da borda igual ao fundo */
 }
 
-.banner button {
-  background-color: #FFC745;
-  border-radius: 50px;
-  border-color: #FFC745;
-  border-width: 2px;
-  border-style: solid;
-  cursor: pointer;
-  padding: 15px 35px;
-  text-align: center;
-  color: #430387;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 20px;
-  font-weight: bold;
-  margin-top: 15px;
+.btn-custom:hover {
+  background-color: #ffd56b; /* Amarelo mais claro no hover */
+  color: #430387; /* Roxo */
+  border-color: #ffd56b; /* Cor da borda igual ao fundo */
+}
+
+.align-right {
+  text-align: right;
+}
+
+.footer {
+  background-color: #430387;
+  padding: 20px;
 }
 
 .footer img {
-  max-width: 100%;
+  max-width: 70%; /* Reduzindo o tamanho da imagem do footer */
   height: auto;
-  display: block;
-  margin: 0;
-  margin-bottom: 0px;
-  margin-top: -200px;
-  padding: 0;
-  background-color: #430387;
-  transform: scale(0.5); 
-
 }
-.footer {
-  background-color: #430387;
-  padding: 0px;
-  margin-bottom: 0;
-  margin: 0;
-}
-
-.parceiros{
-  margin: 0;
-}
-
 
 @media only screen and (max-width: 768px) {
-  .header {
-    text-align: center;
-  }
-
-  .banner {
-    text-align: center;
-  }
-
+  .header,
+  .banner,
   .footer {
     text-align: center;
   }
 
-  .footer .parceiros img {
-    max-width: 80%;
-    height: auto;
-  }
-
-  .footer {
-    padding: 20px;
+  .header img {
+    margin-right: 15px; /* Adicionando margem à direita para separar o logo do texto */
   }
 }
 
 @media only screen and (max-width: 600px) {
-  .header img {
-    width: 100%;
-    margin: 0;
-  }
-
-  .banner img {
-    max-width: 100%;
-    height: auto;
-    margin: 20px 0;
-  }
-
-  .footer .parceiros img {
-    max-width: 100%;
-    height: auto;
+  .banner h1 {
+    font-size: 3rem;
   }
 }
+
+
+
 
