--- a/assets/CSS/motorista.css
+++ b/assets/CSS/motorista.css
@@ -1,51 +1,52 @@
-body{
+body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 0; 
-    padding: 0;
     background-color: #dcdcdc3b;
 }
 
-.header.motorista {
-    background-color: #430387;
-    padding: 35px;
-    text-align: right;
-} 
-
-ul{
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    color: #FFA500;
-    margin-top: 10px;
-    font-size: larger;
-}
-
-li{
-    margin: 1px;
-    cursor: pointer;
-    margin-left: 30px;
-}
-
-a{ 
-    text-decoration: none;
-    color: #FFA500;
-}
-
-.header img { 
-    max-width: auto; 
-    height: 70px; 
-    float: left; 
-    margin-top: -15px;
+ .logo{ 
+    transform: scale(0.5);
     margin-left: 50px;
 }
 
-body h1 {
+.navbar{
+    height: 150px;
+    width: 100%;
+    background-color:#430387;
+    margin-bottom: 45px;
+}
+
+.navbar-nav .nav-item .nav-link.active {
+    color: #FFA500; 
+}
+
+.navbar-nav .nav-item .nav-link.active:hover {
+    color: #9666ca; 
+}
+
+.navbar-nav .nav-item .nav-link {
+    color: #FFA500;
+}
+
+
+.navbar-nav .nav-item .nav-link:hover {
+    color: #9666ca; 
+}
+
+.navbar-nav .nav-link.active::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: #FFA500; 
+    margin-top: 3px; 
+  }
+
+
+.text-center{
     color: #430387;
     text-align: center; 
     margin-top: 50px;
-    font-size: 50px;
-    
+    font-size: 50px;  
 }
 
 .body img {
@@ -59,19 +60,16 @@ body h1 {
 .footer {
     background-color: #430387;
     padding: 30px;
-    margin: 0;
-    display: grid; 
-    grid-template-columns: auto 1fr; 
-    align-items: center; 
-    gap: 20px; 
-}
+    margin-top: 10%;
+    margin-bottom: 0;
+  }
 
-h3 {
+  .footer h3 {
     color: #FFC745;
     text-align: left;
-    margin: 15px; 
-
-}
+    margin: 15px;
+    font-size: 15px;
+  }
 
 @media only screen and (max-width: 768px) {
     .header {
