--- a/assets/CSS/passageiro.css
+++ b/assets/CSS/passageiro.css
@@ -1,49 +1,46 @@
-body{
+body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 0;
-    padding: 0;
     background-color: #dcdcdc3b;
 }
 
-
-.header {
-    background-color: #430387;
-    padding: 35px;
-    text-align: right;
-    margin: 0px;
-    margin-top: 0;
-    border-top: none;
-} 
-
-
-.header img { 
-    max-width: auto; 
-    height: 70px; 
-    float: left; 
-    margin-top: -15px;
+ .logo{ 
+    transform: scale(0.5);
     margin-left: 50px;
 }
 
-ul{
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    color: #FFA500;
-    margin-top: 10px;
-    font-size: larger;
+.navbar{
+    height: 150px;
+    width: 100%;
+    background-color:#430387;
+    margin-bottom: 45px;
 }
 
-li{
-    margin: 1px;
-    cursor: pointer;
-    margin-left: 30px;
+.navbar-nav .nav-item .nav-link.active {
+    color: #FFA500; 
 }
 
-a{ 
-    text-decoration: none;
+.navbar-nav .nav-item .nav-link.active:hover {
+    color: #9666ca; 
+}
+
+.navbar-nav .nav-item .nav-link {
     color: #FFA500;
 }
+
+
+.navbar-nav .nav-item .nav-link:hover {
+    color: #9666ca; 
+}
+
+.navbar-nav .nav-link.active::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: #FFA500; 
+    margin-top: 3px; 
+  }
+
 
 body h1 {
     color: #430387;
@@ -59,23 +56,19 @@ body h1 {
     margin-right: 30px;
     margin-left: 0px;
 } 
-
 .footer {
     background-color: #430387;
     padding: 30px;
-    margin: 0;
-    display: grid; 
-    grid-template-columns: auto 1fr; 
-    align-items: center; 
-    gap: 20px; 
-}
+    margin-top: 10%;
+    margin-bottom: 0;
+  }
 
-h3 {
+  .footer h3 {
     color: #FFC745;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: left;
-    margin: 15px; 
-}
+    margin: 15px;
+    font-size: 15px;
+  }
 
 @media only screen and (max-width: 768px) {
     .header {
@@ -91,8 +84,5 @@ h3 {
         display: block;
         margin-bottom: 10px;
     }
-
-    h1 {
-        margin: 10px;
-    }
 }
+
