--- a/assets/CSS/perguntas.css
+++ b/assets/CSS/perguntas.css
@@ -1,48 +1,47 @@
-body{
+body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #fff;
+  background-color: #dcdcdc3b;
 }
 
-.header.perguntas{
-  background-color: #430387;
-  padding: 35px;
-  text-align: right;
-  margin: 0px;
-  margin-top: 0;
-  margin-bottom: 20px;
-  border-top: none;
-} 
-
-.header img { 
-  max-width: auto; 
-  height: 70px; 
-  float: left; 
-  margin-top: -15px;
+.logo{ 
+  transform: scale(0.5);
   margin-left: 50px;
 }
 
-ul{
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  color: #FFA500;
-  margin-top: 10px;
-  font-size: larger;
+.navbar{
+  height: 150px;
+  width: 100%;
+  background-color:#430387;
+  margin-bottom: 45px;
 }
 
-li{
-  margin: 1px;
-  cursor: pointer;
-  margin-left: 30px;
+.navbar-nav .nav-item .nav-link.active {
+  color: #FFA500; 
 }
 
-a{ 
-  text-decoration: none;
+.navbar-nav .nav-item .nav-link.active:hover {
+  color: #9666ca; 
+}
+
+.navbar-nav .nav-item .nav-link {
   color: #FFA500;
 }
+
+
+.navbar-nav .nav-item .nav-link:hover {
+  color: #9666ca; 
+}
+
+.navbar-nav .nav-link.active::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #FFA500; 
+  margin-top: 3px; 
+}
+
+
 
 h2{
   color: #FFC745;
@@ -52,7 +51,7 @@ h2{
 
 .img-container {
   display: flex;
-  justify-content: center; /* Centraliza o conteúdo horizontalmente */
+  justify-content: center; 
 }
 
 .img1 {
@@ -60,37 +59,29 @@ h2{
   margin-bottom: 40px;
 }
 
-
-
-
 .footer {
   background-color: #430387;
-  padding: 40px;
-  margin-top: 30px; 
-  margin-right: 0;
-  margin-left: 0;
-  display: grid;
-  grid-template-columns: auto 2fr;
-  align-items: center;
-  padding-left: 80px; 
+  padding: 30px;
+  margin-top: 10%;
   margin-bottom: 0;
 }
 
-
-h2 {
+.footer h3 {
   color: #FFC745;
+  text-align: left;
+  margin: 15px;
+  font-size: 15px;
+}
+
+.side-text {
+  color: #430387;
   text-align: center; 
   margin: 5px; 
-  margin-top: 20px;
+  margin-top: 40px;
   margin-bottom: 10px;
+  font-size: medium;
 }
 
-h3{
-  color: #FFC745;
-  text-align: left; 
-  margin-top: -10px;
-  margin-left: 30px;
-}
 
 @media only screen and (max-width: 768px) {
   .header {
