--- a/assets/CSS/missao.css
+++ b/assets/CSS/missao.css
@@ -3,12 +3,12 @@ body {
     background-color: #dcdcdc3b;
 }
 
- .logo{ 
+.logo { 
     transform: scale(0.5);
     margin-left: 50px;
 }
 
-.navbar{
+.navbar {
     height: 150px;
     width: 100%;
     background-color:#430387;
@@ -27,7 +27,6 @@ body {
     color: #FFA500;
 }
 
-
 .navbar-nav .nav-item .nav-link:hover {
     color: #9666ca; 
 }
@@ -39,7 +38,8 @@ body {
     height: 2px;
     background-color: #FFA500; 
     margin-top: 3px; 
-  }
+}
+
 
 .text-content{
     color: #430387;
@@ -62,8 +62,8 @@ body {
 }
 
 .sidebar img {
-    width: 100%; /* Garante que a imagem preencha a largura da barra lateral */
-    height: auto; /* Mantém a proporção da imagem */
+    width: 100%; 
+    height: auto; 
 }
 
 .footer .col-lg-6 h3 {
